Bug 324693 - new projectfilter does not take over existing filters and drops default-filters too
Summary: new projectfilter does not take over existing filters and drops default-filte...
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: project (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR major
Target Milestone: 1.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-09-09 10:24 UTC by Andreas Pakulat
Modified: 2013-09-23 22:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Pakulat 2013-09-09 10:24:58 UTC
I opened an existing project (using the generic project manager) that had a filter specification in its project configuration:

[Filters]
Excludes=*.pyc,*/.*,*/*~

With the new projectfilter plugin this results in a completely empty list of filters. While I could accept that automatically recognizing the older filters cannot/is not supported, at least the default list of excludes for VCS files/subdirs, hidden files etc. should be applied. The widget however is completely empty.

After removing the [Filters] group from the config file the standard filters are at least applied again. Re-Adding the entry and restarting KDevelop reproduces the bug again.

Reproducible: Always

Steps to Reproduce:
1. Setup a project with the old filter format of the generic project manager ([Filters] group with an Excludes=*.pyc entry)
2. Open Kdevelop that has the new projectfilter plugin installed with that project
3. Open the project configuration and select the entry "Project Filter"
Actual Results:  
The list of filters is empty.

Expected Results:  
The list of filters should at least contain the defaults for VCS, hidden files etc. It would also be nice if the existing Exclude filter entry would be converted to the new format.
Comment 1 Milian Wolff 2013-09-23 22:26:16 UTC
Git commit 183a81c4c0a0c47299f08e00490177d9aeacd9da by Milian Wolff.
Committed on 23/09/2013 at 22:25.
Pushed by mwolff into branch 'master'.

Use default filter set also when the user has an old Filters config.

We do not convert the old Excludes/Includes rules though, as one would
need to merge the rules with the new defaults which is too much hassle.

M  +6    -2    plugins/projectfilter/filter.cpp

http://commits.kde.org/kdevplatform/183a81c4c0a0c47299f08e00490177d9aeacd9da