Use default filter set also when the user has an old Filters config.

We do not convert the old Excludes/Includes rules though, as one would
need to merge the rules with the new defaults which is too much hassle.

BUG: 324693